# swagger.json
@@ -296,6 +296,93 @@
           }
         }
       }
+    },
+    "/api/movimentacao/": {
+      "get": {
+        "tags": [
+          "Movimentação de Material"
+        ],
+        "description": "Obter as movimentações de materiais cadastrados.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Movimentação de Material"
+        ],
+        "description": "Cadastrar uma movimentação de material.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "example": "any"
+                },
+                "material_id_material": {
+                  "example": "any"
+                },
+                "id_lideranca_responsavel": {
+                  "example": "any"
+                },
+                "id_lideranca_solicitante": {
+                  "example": "any"
+                },
+                "tipo": {
+                  "example": "any"
+                },
+                "id_oansista": {
+                  "example": "any"
+                },
+                "quantidade": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/movimentacao/{id}": {
+      "get": {
+        "tags": [
+          "Movimentação de Material"
+        ],
+        "description": "Obter uma movimentação de material específica pelo id.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
